# eggnog_runner

./: README.md  eggnog_mapper.yml  install.sh  justfile  pyproject.toml  sync-nersc.sh
src/utils/: collect_eggnog_assignments.py  emapper_runner.py  parsl_emapper_runner.py  submit_parsl.sl
