cache-dir = ".cache"

[tool.poetry]
name = "kg-microbe"
version = "0.1.0"
description = ""
authors = ["Christopher Neely <christopher.neely1200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
plumbum = "^1.8.2"
parsl = "^2024.4.22"
polars = "^0.20.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
pytest-cov = "^4.1.0"
ruff = "^0.3.3"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "D1", "D41", "FIX"]
ignore = ["D105", "D415"]

